fix: nasa image alt

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </li>
         <li>
           <a class="projects-images6" href="https://github.com/CarlosHPires/consuming-nasa-api" target="_blank">
-            <img src="./assets/nasaApod.png" width="1920" height="967" alt="Portfólio project">
+            <img src="./assets/nasaApod.png" width="1920" height="967" alt="Nasa Space Images project">
             <p class="projects-description">
               Consuming nasa's apod api
             </p>
