fix: just fixing some skills

--- a/index.html
+++ b/index.html
@@ -167,42 +167,56 @@
       </div>
 
       <div class="my-skills">
-        <div class="skill skill1">
+        <div class="skill">
           <i class="icon fa-brands fa-html5"></i>
           <span>HTML</span>
           <p class="skill-paragraph">
             I can build semantic and accessible HTML structures.
           </p>
         </div>
-        <div class="skill skill2">
+        <div class="skill">
           <i class="icon fa-brands fa-css3-alt"></i>
           <span>CSS</span>
           <p class="skill-paragraph">
             I write responsive, reusable and organized CSS.
           </p>
         </div>
-        <div class="skill skill3">
+        <div class="skill">
           <i class="icon fa-brands fa-square-js"></i>
           <span>JS</span>
           <p class="skill-paragraph">
             I know how to consume APIs and give life to interfaces.
           </p>
         </div>
-        <div class="skill skill4">
+        <div class="skill">
           <i class="icon fa-brands fa-react"></i>
           <span>REACT</span>
           <p class="skill-paragraph">
             I create reusable components and scalable code.
           </p>
         </div>
-        <div class="skill skill5">
+        <div class="skill">
+          <i class="icon fa-brands fa-php"></i>
+          <span>PHP</span>
+          <p class="skill-paragraph">
+            I have experience in OOP, clean code and onion/mvc architectures.
+          </p>
+        </div>
+        <div class="skill">
+          <i class="icon fa-solid fa-database"></i>
+          <span>SQL</span>
+          <p class="skill-paragraph">
+            I have experience in MySql and SQL Server, data modeling and queries.
+          </p>
+        </div>
+        <div class="skill">
           <i class="icon fa-brands fa-git-alt"></i>
           <span>GIT</span>
           <p class="skill-paragraph">
             I know how to version my code using git and work as a team with gitflow.
           </p>
         </div>
-        <div class="skill skill7">
+        <div class="skill">
           <i class="icon fa-regular fa-face-smile"></i>
           <span>AGILE</span>
           <p class="skill-paragraph">
