--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="introduction-bg">
       <div class="introduction-content">
         <h1 class="my-name">Carlos <span class="pires">Pires</span></h1>
-        <h2 class="my-role">&lt;Front-End Developer/&gt;</h2>
+        <h2 class="my-role">&lt;Full-Stack Software Engineer/&gt;</h2>
         <ul class="footer-social-medias">
           <li class="social-medias"><a href="https://www.linkedin.com/in/carlos-henrique-de-oliveira-pires-94454617b/" aria-label="Linkedin" alt="Linkedin" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
 
@@ -62,13 +62,13 @@
     <div class="about-me-info">
       <div class="about-me-content">
         <h1 class="about-me-title">Hi<span>.</span></h1>
-        <p class="about-me-paragraph">I am a 21 years old front-end developer,
+        <p class="about-me-paragraph">I am a 21 years old full-stack developer,
           Systems Analysis and Development student at Uniasselvi in
           Blumenau-SC, <span>I'm almost graduating 6/6.</span></p>
 
         <p class="about-me-paragraph">In my leisure time I like to play video games,watch tv series,
-          improve my front-end <span>knowledge</span> and spend time
-          with myself. I also write some things about front-end
+          improve my software <span>knowledge</span> and spend time
+          with myself. I also write some things about software
           development<a href="https://medium.com/@carlospires.dev" target="_blank"> in my medium</a>
         </p>
       </div>
