--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
           </p>
         </div>
         <div class="skill">
+          <i class="icon fa-brands fa-node-js"></i>
+          <span>NODE.JS</span>
+          <p class="skill-paragraph">
+            I know how to create back-end servers using Express and mongodb/mysql.
+          </p>
+        </div>
+        <div class="skill">
           <i class="icon fa-brands fa-react"></i>
           <span>REACT</span>
           <p class="skill-paragraph">
