--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
           </p>
         </div>
         <div class="skill">
+          <i class="fa-regular fa-window-flip" style="color: #ffffff;"></i>
+          <span>C#</span>
+          <p class="skill-paragraph">
+            I know how to create apis and other software on .net platform.
+          </p>
+        </div>
+        <div class="skill">
           <i class="icon fa-brands fa-node-js"></i>
           <span>NODE.JS</span>
           <p class="skill-paragraph">
