fix: just putting another technology

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           </p>
         </div>
         <div class="skill">
-          <i class="fa-regular fa-window-flip" style="color: #ffffff;"></i>
+          <i class="fa-regular fa-window-flip"></i>
           <span>C#</span>
           <p class="skill-paragraph">
             I know how to create apis and other software on .net platform.
