just a little fixes

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <div class="about-me-info">
       <div class="about-me-content">
         <h1 class="about-me-title">Hi<span>.</span></h1>
-        <p class="about-me-paragraph">I am a 21 years old full-stack developer,
-          Systems Analysis and Development student at Uniasselvi in
-          Blumenau-SC, <span>I'm almost graduating 6/6.</span></p>
+        <p class="about-me-paragraph">I am a 22 years old full-stack developer,
+          I have a degree in <span>Systems Analysis and Development</span> and I live in
+          Blumenau-SC.</p>
 
         <p class="about-me-paragraph">In my leisure time I like to play video games,watch tv series,
           improve my software <span>knowledge</span> and spend time
@@ -75,7 +75,7 @@
 
 
       <div class="me-img">
-        <img class="about-me-img" width="689" height="865" src="./assets/astronautMe.jpg" alt="astronaut me">
+        <img class="about-me-img" width="689" height="865" src="./assets/eu.png" alt="me">
       </div>
     </div>
   </section>
