fix: just fixing some things about the exp section

--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
 
   <section id="experience" class="experience">
     <div class="experience-content">
-      <div class="experience-img">
-        <img src="./assets/logoAmbev.png" width="843" height="116" alt="Ambevtech logo">
-      </div>
-      <h2 class="experience-years"><span>03+</span> years of experience</h2>
+      <img id="logo-ambev" src="./assets/logoAmbev.png" width="843" height="116" alt="Ambevtech logo">
+      <img id="logo-benner" src="./assets/benner_rgb_pto-01.png" width="843" height="116" alt="Benner logo">
     </div>
+    <h2 class="experience-years"><span>04+</span> years of experience</h2>
   </section>
 
   <section id="projects" class="projects">
